Fix custom cursor bug on Safari & Firefox

--- a/src/app/components/custom-cursor.module.css
+++ b/src/app/components/custom-cursor.module.css
@@ -16,9 +16,6 @@
 .customCursor.visible {
   opacity: 1;
   visibility: visible;
-  .cursorImage {
-    transform: translateY(0);
-  }
 }
 
 /* Image styling */
@@ -30,8 +27,4 @@
   inset: 0;
   border: 1.6rem solid var(--cream);
   z-index: 1;
-}
-.cursorImage {
-  transform: translateY(-100%);
-  transition: transform 3s ease;
 }
